@@ -133,6 +133,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #9450: Fix memory leak in readline.replace_history_item and
+  readline.remove_history_item for readline version >= 5.0.
+
 - Issue #8105: Validate file descriptor passed to mmap.mmap on Windows.
 
 - Issue #1019882: Fix IndexError when loading certain hotshot stats.
